feat: upsert vector added
